# shortest_path_queries

./: .bazelrc  .clang-format  README.md  WORKSPACE  WORKSPACE.bazel
executer/: BUILD.bazel  Cargo.toml  build.rs
executer/src/: executer_service.rs  globals.rs  main.rs  queries_manager.rs  query_coordinator.rs  workers_connection.rs
kubernetes/: cleanup.sh  run_deploy.sh
kubernetes/deployments/: executor.yaml  partitioner.yaml  worker.yaml
kubernetes/services/: executor.yaml  partitioner.yaml  worker.yaml
locks/: cargo-bazel-lock.json
main/: BUILD.bazel  worker.cpp
messages/: graph.proto
partitioner/: BUILD.bazel  Dockerfile  main.py  requirements.txt
partitioner/parsers/: open_street_map.py  parser.py
partitioner/partitioners/: __init__.py  grid.py  partitioner.py
partitioner/rpc_servers/: manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py  manager_server.py  rpc_server.py
protos/: BUILD.bazel  executer.proto  graph.proto  manager.proto  worker.proto
protos/generated_rust/: BUILD.bazel  gen.rs  generated.rs
test/: executer_pb2.py  executer_pb2.pyi  executer_pb2_grpc.py  plot_utils.py  requirements.txt  test.py  test2.py
worker/: BUILD.bazel  Cargo.toml  build.rs  cargo-bazel-lock.json  graph_storage.cpp  graph_storage.hpp  worker.cpp  worker.hpp
worker/graph_cpp_grpc/: BUILD.bazel
worker/src/: globals.rs  graph_receiver.rs  graph_store.rs  main.rs  proto_helpers.rs  query_processor.rs  query_processor_holder.rs  query_realizator.rs  request_processor.rs  request_server.rs  worker_service.rs
