load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy")

rust_binary(
    name = "executer",
    srcs = glob(["src/*.rs"]),
    edition = "2021",
    deps = [
        "//protos/generated_rust:generated",
        "@crates//:tonic",
        "@crates//:prost",
        "@crates//:futures",
        "@crates//:tokio",
        "@crates//:clap",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:async-stream",
    ],
)

rust_clippy(
    name = "executer_clippy",
    testonly = True,
    deps = [":executer"],
)
