load("@rules_rust//rust:defs.bzl", "rust_clippy")
load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")

rust_image(
    name = "executer",
    srcs = glob(["src/*.rs"]),
    edition = "2021",
    deps = [
        "//protos/generated_rust:generated",
        "@crates//:tonic",
        "@crates//:prost",
        "@crates//:futures",
        "@crates//:tokio",
        "@crates//:clap",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:async-stream",
        "@crates//:log",
        "@crates//:pretty_env_logger",
        "@crates//:local-ip-address",
    ],
)

rust_clippy(
    name = "executer_clippy",
    testonly = True,
    deps = [":executer"],
)
