[package]
name = "executer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tonic-build = "0.8"
futures = "0.3"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"
