load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "worker_proto",
    srcs = [":worker.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "manager_proto",
    srcs = [":manager.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

cpp_grpc_library(
    name = "worker_cpp_grpc",
    protos = ["//protos:worker_proto"],
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "manager_cpp_grpc",
    protos = ["//protos:manager_proto"],
    visibility = ["//visibility:public"],
)

python_grpc_library(
    name = "manager_py_grpc",
    protos = ["//protos:manager_proto"],
)
