load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "worker",
    srcs = [":worker.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "manager",
    srcs = [":manager.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

python_grpc_library(
    name = "manager_py",
    protos = [":manager"],
    visibility = ["//visibility:public"],
)

python_grpc_library(
    name = "worker_py",
    protos = [":worker"],
    visibility = ["//visibility:public"],
)
