load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "worker",
    srcs = [":worker.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

proto_library(
    name = "manager",
    srcs = [":manager.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

proto_library(
    name = "executer",
    srcs = [":executer.proto"],
    visibility = ["//visibility:public"],
)
