load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")
load("@rules_rust//rust:defs.bzl", "rust_clippy")

rust_image(
    name = "worker",
    srcs = glob(["src/*.rs"]),
    edition = "2021",
    deps = [
        "//protos/generated_rust:generated",
        "@crates//:tonic",
        "@crates//:async-stream",
        "@crates//:prost",
        "@crates//:futures",
        "@crates//:num_cpus",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:clap",
        "@crates//:log",
        "@crates//:pretty_env_logger",
        "@crates//:local-ip-address",
        "@crates//:once_cell",
    ],
)

rust_clippy(
    name = "worker_clippy",
    testonly = True,
    deps = [":worker"],
)
