[package]
edition = "2021"
name = "worker"
version = "0.1.0"

[dependencies]
tonic = "0.8"
prost = "0.11"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.2"
clap = { version = "4.0.32", features = ["derive"] }
petgraph = "0.6.2"
num_cpus = "1.15.0"

[build-dependencies]
tonic-build = "0.8"
